name:                cis194
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/dhil/cis194#readme
license:             BSD3
license-file:        LICENSE
author:              Daniel Hillerström
maintainer:          daniel.hillerstrom@gmail.com
copyright:           Copyright (c) 2016 Daniel Hillerström
category:            Uncategorised
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     HW01
  ghc-options:         -Wall
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable cis194-exe
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -Wall
  build-depends:       base
                     , cis194
  default-language:    Haskell2010

test-suite cis194-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , cis194
                     , test-framework
                     , test-framework-hunit
                     , test-framework-quickcheck2
                     , HUnit
                     , QuickCheck
  ghc-options:         -Wall
  default-language:    Haskell2010